@@ -856,6 +856,20 @@ that no gateway should be used.
 
   </sect2>
 
+  <sect2 id="preseed-network-console">
+  <title>Network console</title>
+
+<informalexample role="example"><screen>
+# Use the following settings if you wish to make use of the network-console
+# component for remote installation over SSH. This only makes sense if you
+# intend to perform the remainder of the installation manually.
+#d-i anna/choose-modules string network-console
+#d-i network-console/password password r00tme
+#d-i network-console/password-again password r00tme
+</screen></informalexample>
+
+  </sect2>
+
   <sect2 id="preseed-mirror">
   <title>Mirror settings</title>
 <para>
